# secondlens

./: .gitignore  RD.md  README.md  config.yaml  get_bucket.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  scheduler.py  standards.py  worker.py
app/clients/: __init__.py  api_client.py  http_client.py
app/intellens/: config.py  decision.py  models.py  pipeline.py  state.py  utils.py  validators.py
app/intellens/clients/: ai.py  external.py  hash.py  llm.py  sc.py  wd.py  wfy.py  xmon.py
app/models/: __init__.py  task.py
app/services/: __init__.py  intellens_service.py  task_service.py  wfy_service.py  wfy_status_service.py
app/utils/: logger.py
config/intellens/: dev.yaml  prod.yaml
deploy/: README-deploy.md  secondlens.service
tests/: test_cli.py  test_ioc.py  test_state_service.py  test_task_service.py
