[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secondlens"
version = "0.1.0"
description = "Controlled egress intelligence secondary judgment worker"
requires-python = ">=3.10"
dependencies = [
  "boto3==1.34.34",
  "pip-system-certs==5.2",
  "pyyaml>=6.0,<7.0",
  "apscheduler>=3.10,<4.0",
  "httpx>=0.27,<1.0",
  "loguru>=0.7,<1.0",
]

[project.scripts]
secondlens = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
